--- a/ejercicio/index.html
+++ b/ejercicio/index.html
@@ -4,11 +4,12 @@
    <head>
       <meta charset="utf-8"/>  
       <meta name="description" content="estructura basica de htm5"> 
-      <title>ejercicio html5</title>
+      <title>html5 ejercicio</title>
       <link rel="stylesheet" href="css/estilo.css" type="text/css"/>
    </head>
    <body>
-    <header> logo y cabecera
+    <header><h1>ejercicio html5</h1>
+<h2>ejercicio 1</h2>
       </header>
       <nav id="sticker">
 		nav 1 (Quiénes somos)
