se le aplico media screen
Aplicacion de media querys

--- a/modulo_2/lab2/index.html
+++ b/modulo_2/lab2/index.html
@@ -71,6 +71,15 @@
         </figcaption>
       </figure> 
       <!-- End Pic 4-->
+            <!-- start Pic 1-->
+      <figure class="four columns all skills">
+        <img src="http://placehold.it/480x480/000000" alt="img 1">
+        <figcaption>
+          <h4>Lorem ipsum</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam minus excepturi sit beatae quae, nisi numquam quis, pariatur adipisci provident atque, ut? Voluptates obcaecati nobis exercitationem accusantium cum dolores, tempora.</p>
+        </figcaption>
+      </figure> 
+      <!-- End Pic 1-->
     </section>
   </form>
   <!-- end form and section -->
