--- a/lab21/index.html
+++ b/lab21/index.html
@@ -49,10 +49,10 @@ angular.module('mainApp',  [])
 .controller('studentController', function($scope){
 
     $scope.reset = function(){
-        $scope.firstName = 'Fabio';
-        $scope.lastName = 'Calvache',
-        $scope.email = "fabio.Calvache@gmail.com";
-        $scope.age = 46;
+        $scope.firstName = '';
+        $scope.lastName = '',
+        $scope.email = "@gmail.com";
+        $scope.age = 19;
     }
 
     $scope.reset();
