--- a/lab25/index.html
+++ b/lab25/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8" />
     <script type="text/javascript" src="../assets/angular.min.js"></script>
     <script type="text/javascript" src="../assets/angular-route.min.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
+
+<!-- Latest compiled and minified JavaScript -->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
+
 </head>
 <body>
    <h1>Visita el Zoo</h1>
